# gipmsg

./: .gitignore  AUTHORS  ChangeLog  README  autogen.sh  automk-linux.sh  automk-win32.sh  configure  configure.ac
pixmaps/: gipmsg.desktop
po/: .gitignore  zh_CN.po
src/: Makefile.am  codeset.c  common.h  core.c  core.h  debug.c  debug.h  emotion.c  emotion.h  fileshare.c  fileshare.h  gipmsg-types.h  ipmsg-types.h  ipmsg.h  main.c  mainwin.c  mainwin.h  message.c  message.h  myconfig.c  myconfig.h  os-support.h  senddlg.c  senddlg.h  user.c  user.h  util.c  util.h
trunk/: Makefile.am  autogen.sh  automk-linux.sh  configure  configure.ac
trunk/pixmaps/: Makefile.am
trunk/po/: POTFILES.in  zh_CN.po
trunk/src/: Makefile.am  codeset.h  common.h  core.c  core.h  debug.c  debug.h  emotion.c  emotion.h  fileshare.c  fileshare.h  gipmsg-types.h  ipmsg-types.h  ipmsg.h  list.h  main.c  mainwin.c  mainwin.h  message.c  message.h  myconfig.c  myconfig.h  os-support.h  os_support.h  senddlg.c  senddlg.h  sendfile.c  sendfile.h  user.c  user.h  util.c  util.h
trunk/tests/: Makefile.am  core.c  message.c  util.c
