AM_CFLAGS = $(GIPMSG_CFLAGS) -DDEBUG

bin_PROGRAMS = gipmsg
gipmsg_LDADD = $(GIPMSG_LIBS)	

gipmsg_SOURCES = \
	ipmsg.h \
	os-support.h \
	ipmsg-types.h \
	gipmsg-types.h \
	common.h \
	debug.c debug.h \
	util.c util.h \
	codeset.c codeset.h \
	myconfig.c myconfig.h \
	message.c message.h \
	core.c core.h \
	user.c user.h \
	fileshare.c fileshare.h \
	mainwin.c mainwin.h \
	senddlg.c senddlg.h \
	emotion.c emotion.h \
	main.c
