icondir = $(datadir)/gipmsg/icons
emotiondir = $(datadir)/gipmsg/emotions
desktopdir = $(datadir)/applications

icon_DATA = \
	icons/icon_linux.png \
	icons/expender-open.png \
	icons/expender-closed.png \
	icons/emotion.png \
	icons/image.png \
	icons/file.png \
	icons/folder.png \
	icon.png \
	icon-tray.png

emotion_DATA = \
	emotions/1.gif emotions/2.gif emotions/3.gif \
	emotions/4.gif emotions/5.gif emotions/6.gif \
	emotions/7.gif emotions/8.gif emotions/9.gif \
	emotions/10.gif emotions/11.gif emotions/12.gif \
	emotions/13.gif emotions/14.gif emotions/15.gif \
	emotions/16.gif emotions/17.gif emotions/18.gif \
	emotions/19.gif emotions/20.gif emotions/21.gif \
	emotions/22.gif emotions/23.gif emotions/24.gif \
	emotions/25.gif emotions/26.gif emotions/27.gif \
	emotions/28.gif emotions/29.gif emotions/30.gif \
	emotions/31.gif emotions/32.gif emotions/33.gif \
	emotions/34.gif emotions/35.gif emotions/36.gif \
	emotions/37.gif emotions/38.gif emotions/39.gif \
	emotions/40.gif emotions/41.gif emotions/42.gif \
	emotions/43.gif emotions/44.gif emotions/45.gif \
	emotions/46.gif emotions/47.gif emotions/48.gif \
	emotions/49.gif emotions/50.gif emotions/51.gif \
	emotions/52.gif emotions/53.gif emotions/54.gif \
	emotions/55.gif emotions/56.gif emotions/57.gif \
	emotions/58.gif emotions/59.gif emotions/60.gif \
	emotions/61.gif emotions/62.gif emotions/63.gif \
	emotions/64.gif emotions/65.gif emotions/66.gif \
	emotions/67.gif emotions/68.gif emotions/69.gif \
	emotions/70.gif emotions/71.gif emotions/72.gif \
	emotions/73.gif emotions/74.gif emotions/75.gif \
	emotions/76.gif emotions/77.gif emotions/78.gif \
	emotions/79.gif emotions/80.gif emotions/81.gif \
	emotions/82.gif emotions/83.gif emotions/84.gif \
	emotions/85.gif emotions/86.gif emotions/87.gif \
	emotions/88.gif emotions/89.gif emotions/90.gif \
	emotions/91.gif emotions/92.gif emotions/93.gif \
	emotions/94.gif emotions/95.gif emotions/96.gif

desktop_DATA = gipmsg.desktop

EXTRA_DIST = $(icon_DATA) $(emotion_DATA) $(desktop_DATA)
